2th code contain css html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h3>hfhgfx</h3>
 
     <script src="java.js"></script>
 </body>
